k8s/redis-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-deployment
  namespace: pin-people
  labels:
    app: redis-deployment
spec:
  selector:
    matchLabels:
      app: redis-deployment
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: redis-deployment
    spec:
      containers:
        - name: redis
          image: redis:6.2-alpine
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "200m"
          ports:
            - containerPort: 6379
          livenessProbe:
            tcpSocket:
              port: 6379
            initialDelaySeconds: 15
            periodSeconds: 20
          readinessProbe:
            tcpSocket:
              port: 6379
            initialDelaySeconds: 5
            periodSeconds: 10
