k8s/redis-service.yml
apiVersion: v1
kind: Service
metadata:
  name: redis-service
  namespace: pin-people
spec:
  selector:
    app: redis-deployment
  ports:
    - port: 6379
      targetPort: 6379
  type: ClusterIP
